Add Mapbox token documentation and helpful UI message

--- a/env.example
+++ b/env.example
@@ -13,3 +13,7 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key
 # NEXT_PUBLIC_STORAGE_BUCKET_PROCESSED=processed-images
 # NEXT_PUBLIC_STORAGE_BUCKET_OPTIMIZED=optimized-web
 
+# Optional: Mapbox Access Token (for location autocomplete)
+# Get a free token from: https://account.mapbox.com/access-tokens/
+# NEXT_PUBLIC_MAPBOX_ACCESS_TOKEN=your_mapbox_access_token
+
